unpdate display name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "formatchinesewords",
-	"displayName": "Format Chinese Words In Revit IFC",
+	"displayName": "Format Chinese Words In Revit IFC Files",
 	"publisher": "wenpan",
 	"description": "First",
 	"version": "1.0.1",
