--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "formatchinesewords",
 	"displayName": "Format Chinese Words In Revit IFC Files",
 	"publisher": "wenpan",
-	"description": "First",
+	"description": "This extension is to format chinese words in IFC files which is exported from Revit.",
 	"version": "1.0.3",
 	"engines": {
 		"vscode": "^1.42.0"
