--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "unicode2chinese",
-	"displayName": "Convert unicode to Chinese",
+	"displayName": "Convert Unicode to Chinese",
 	"publisher": "wenpan",
 	"description": "This extension is to Convert unicode to Chinese in some specific files.",
 	"version": "2.0.1",
